--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@
 
 .fondotelon{
     background-image: url(Telon.jpg);
-    height: 200vh;
+    height: 220vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .fondotelon2{
     background-image: url(Telon2.jpg);
-    height: 200vh;
+    height: 220vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .fondosala{
     background-image: url(Teatro.jpg);
-    height: 200vh;
+    height: 220vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -28,15 +28,15 @@
 @media screen and (min-width: 768px) and (max-width: 1200px) {
     .fondotelon{
             background-image: url(Telon.jpg);
-            height: 280vh;
+            height: 300vh;
     }
     .fondotelon2{
         background-image: url(Telon2.jpg);
-        height: 280vh;
+        height: 300vh;
     }
     .fondosala{
         background-image: url(Teatro.jpg);
-        height: 280vh;
+        height: 300vh;
     }
 }
 
@@ -44,19 +44,22 @@
 @media screen and (max-width: 767px) {
     .fondotelon{
             background-image: url(Telon.jpg);
-            height: 450vh;
+            height: 500vh;
     }
     .fondotelon2{
         background-image: url(Telon2.jpg);
-        height: 450vh;
+        height: 500vh;
     }
     .fondosala{
         background-image: url(Teatro.jpg);
-        height: 450vh;
+        height: 500vh;
     }
 }
 
-
+.img-fit{
+    height: 250px;
+    object-fit: cover;
+}
 
 
 
