--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
 
 .fondosala{
     background-image: url(Teatro2.jpg);
+    object-fit: contain;
     height: 60vh;
     background-repeat: no-repeat;
     background-size: cover;
